--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<script>
 		var nr_buttons = 3;
-		var message_win = 'YOU WIN!!!';
+		var message_win = 'YOU WIN!!! A new round will restart';
 		var message_loss = 'Try again';
 
 		function getRandomInt(max) {
