--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset='utf-8'>
 </head>
 <body>
+	<h3 id="conversation">Select a button below</h3>
 	<form>
 		<fieldset>
 			<legend>Guess the button and win a prize</legend>
@@ -16,7 +17,7 @@
 
 	<script>
 		var nr_buttons = 3;
-		var message_win = 'YOU WIN!!! A new round will restart';
+		var message_win = 'YOU WIN!!! A new round will start in 3s';
 		var message_loss = 'Try again';
 
 		function getRandomInt(max) {
@@ -28,12 +29,16 @@
 		function showResult(btn){
 			var option = parseInt(btn.id[6]);
 			if ((option - 1) === answer) {
-				alert(message_win);
-				location.reload();
+				document.getElementById('conversation').innerText = message_win;
+				setTimeout(refresh, 3000);
 			} else {
-				alert(message_loss);
+				document.getElementById('conversation').innerText = message_loss;
 			}
 			return false;
+		}
+
+		function refresh() {
+			location.reload();
 		}
 	</script>
 </body>
